# hastebin

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-publish.yml
src/: api.rs  auto_delete.rs  data_source.rs  id.rs  main.rs  static_files.rs
src/public/: index.html  index.js
