[package]
name = "hastebin"
version = "0.1.0"
edition = "2021"
authors = ["AdriDoesThings <contact@adridoesthings.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7" }
log = "0.4.20"
mime_guess = "2.0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.29", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
