[package]
name = "hastebin"
version = "0.1.0"
edition = "2021"
authors = ["AdriDoesThings <contact@adridoesthings.com>"]
description = "A minimalistic hastebin server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0" }
env_logger = "0"
log = "0"
mime_guess = "2"
rand = "0"
serde = { version = "1", features = ["derive"] }
sha2 = "0"
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
